fix card spacing

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ h1 {
     border-left: 8px solid #eeb931;
     border-radius: 12px;
     background-color: white;
-    padding: 36px 20px 36px 20px;
+    padding: 32px 18px 32px 18px;
     display: grid;
     grid-template-rows: 20px 1fr 40px;
     gap: 5px;
